--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "debug": "^4.3.4",
     "next": "^13.2.4",
+    "next-share": "^0.25.0",
     "openai": "^4.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-share": "^4.4.1",
     "replicate": "^0.6.1"
   },
   "devDependencies": {
