--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.0.2",
     "debug": "^4.3.4",
     "next": "^13.2.4",
     "next-share": "^0.25.0",
